crates/linesmith/src/tui/snapshots/linesmith__tui__raw_value_editor__tests__raw_value_editor_empty.snap
---
source: crates/linesmith/src/tui/raw_value_editor.rs
expression: "render_to_string(&s, 60, 12)"
---
                       edit raw value                       
    Enter commit · Esc cancel · ← → cursor · Bksp delete
